Changes the name of the folder.

--- a/Land4Leps-master/.project
+++ b/Land4Leps-master/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Land4Leps-master</name>
+	<name>Land4Leps</name>
 	<comment></comment>
 	<projects>
 	</projects>
